Pass the correct TERM value inside envp when spawning

So the codepaths that end up invoking execve still have the correct
TERM entry. Clarify the effect of vte_pty_set_term().

https://bugzilla.gnome.org/show_bug.cgi?id=631589