src/vte.c
@@ -3518,32 +3518,6 @@ _vte_terminal_get_argv (const char *command,
         return argv2;
 }
 
-/*
- * _vte_terminal_filter_envv:
- * @envv: the environment vector
- *
- * Filters out the TERM variable from @envv.
- *
- * Returns: (transfer container): the filtered environment vector
- */
-static char **
-_vte_terminal_filter_envv (char **envv)
-{
-  GPtrArray *array;
-  int i;
-
-  if (envv == NULL)
-    return NULL;
-
-  array = g_ptr_array_sized_new (g_strv_length (envv));
-  for (i = 0; envv[i]; ++i)
-    if (!g_str_has_prefix (envv[i], "TERM="))
-      g_ptr_array_add (array, envv[i]);
-  g_ptr_array_add (array, NULL);
-
-  return (char **) g_ptr_array_free (array, FALSE);
-}
-
 /**
  * vte_terminal_fork_command:
  * @terminal: a #VteTerminal
@@ -3580,7 +3554,7 @@ vte_terminal_fork_command(VteTerminal *terminal,
                           gboolean utmp,
                           gboolean wtmp)
 {
-        char **real_argv, **real_envv;
+        char **real_argv;
         GSpawnFlags spawn_flags;
         GPid child_pid;
         gboolean ret;
@@ -3596,19 +3570,17 @@ vte_terminal_fork_command(VteTerminal *terminal,
         spawn_flags = G_SPAWN_CHILD_INHERITS_STDIN |
                       G_SPAWN_SEARCH_PATH;
         real_argv = _vte_terminal_get_argv (command, argv, &spawn_flags);
-        real_envv = _vte_terminal_filter_envv (envv);
 
         ret = vte_terminal_fork_command_full(terminal,
                                              __vte_pty_get_pty_flags(lastlog, utmp, wtmp),
                                              working_directory,
                                              real_argv,
-                                             real_envv,
+                                             envv,
                                              spawn_flags,
                                              NULL, NULL,
                                              &child_pid,
                                              err);
         g_strfreev (real_argv);
-        g_free (real_envv);
 
 #ifdef VTE_DEBUG
         if (error) {
